# memory-seed

./: .gitattributes  .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  LICENSE  NEXT_STEPS.md  README.md  SECURITY.md  pyproject.toml
.AGENTS/: agent-rules.md  context.md  index.md  style.md
.AGENTS/sessions/: 2026-05-17.md  2026-05-18.md  2026-05-19.md  2026-05-20.md
.agents/: README.md  _registry.yaml  content-creator.md  copywriter.md  developer.md  researcher.md  solo-founder.md
.claude/: launch.json  settings.json
.claude/commands/: esr.md  (+1 more)
.codex/: config.toml  hooks.json
.cursor/: hooks.json
.gemini/: settings.json
.github/: copilot-instructions.md  mcp.json
.memory-seed/: agent-rules.md  index.md  policy.md  project-bootstrap.md  project.yaml  topics.yaml
demo/: AGENTS.md  CLAUDE.md  index.html  meta.json  package.json  voxcpm2-personal-tts-evaluation.md
docs/: CONSTITUTION.md  README.md  functionality-audit.md  graph-edge-contract.md
memory-trace/: CHANGELOG.md  README.md  pyproject.toml
memory-trace/benchmarks/: README.md  renderer-benchmark.css  renderer-benchmark.js
memory-trace/client/: .gitignore  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
memory-trace/client/.storybook/: preview.tsx
memory-trace/client/e2e/: bootstrap.spec.ts  search.spec.ts
memory-trace/client/e2e-scale/: measurements.json  scale.config.ts  scale.spec.ts
memory-trace/client/scripts/: check-sidecar-mermaid.mjs  install-git-hooks.mjs
memory-trace/client/src/: App.tsx  DiagramView.tsx  DiagramViewer.tsx  EntryReader.tsx  GraphWorkspace.tsx  SettingsMenu.stories.tsx  SettingsMenu.tsx  TrailWorkspace.tsx  api.ts  arc2d.test.ts  arc2d.ts  colour.test.ts  colour.ts  diagramZoom.test.ts  diagramZoom.ts  graphCommunities.test.ts  graphCommunities.ts  graphEdgeDefaults.test.ts  graphEdges.test.ts  graphEdges.ts  graphForces.test.ts  graphForces.ts  graphLayout.test.ts  graphLayout.ts  graphMotion.test.ts  graphMotion.ts  graphOverview.test.ts  graphOverview.ts  inspectorScroll.test.ts  inspectorScroll.ts  mermaidConfig.test.ts  mermaidConfig.ts  searchNavigation.test.ts  searchNavigation.ts  searchResults.test.ts  searchResults.ts  styles.css  trailModel.test.ts  trailModel.ts  trailPath.test.ts  (+3 more)
memory-trace/memory_trace/: __init__.py  bench.py  cli.py  evidence.py  graph_projection.py  lense.py  models.py  service.py
memory-trace/memory_trace/static/: app.js  benchmark.html  index.html  manifest.json  renderer-benchmark.css  renderer-benchmark.js  styles.css
memory-trace/memory_trace/static/react/: index.html
memory-trace/memory_trace/static/react/assets/: GraphWorkspace--zDR--kL.js  GraphWorkspace-4C0g4RVJ.js  GraphWorkspace-B2X-pKoD.js  GraphWorkspace-B2untm4Q.js  GraphWorkspace-BAAOM1Fw.js  GraphWorkspace-BEDFQNeq.js  GraphWorkspace-BJbrZCDp.js  GraphWorkspace-BQr6fr8J.js  GraphWorkspace-BT63M-LJ.js  GraphWorkspace-BX91wWeM.js  GraphWorkspace-BXkzUYKS.js  GraphWorkspace-Bd24pMOh.js  GraphWorkspace-BdP5Wf5f.js  GraphWorkspace-Bg2XYh-B.js  GraphWorkspace-Bh6nBCy3.js  GraphWorkspace-Bi-qh4oN.js  GraphWorkspace-BkVQKRno.js  GraphWorkspace-BpL1s2k5.js  GraphWorkspace-BuPbJyaK.js  GraphWorkspace-BxNDzpL7.js  GraphWorkspace-By4kiIXl.js  GraphWorkspace-C8cTbimg.js  GraphWorkspace-C9vERDSM.js  GraphWorkspace-CBZRy9b1.js  GraphWorkspace-CCJaa31C.js  GraphWorkspace-CCbwqtMb.js  GraphWorkspace-CDSuQS-s.js  GraphWorkspace-CDXIlu6x.js  GraphWorkspace-CGXak7_C.js  GraphWorkspace-CILv7xli.js  GraphWorkspace-CIP84YrI.js  GraphWorkspace-CLj8CyE8.js  GraphWorkspace-CT_oqY2c.js  GraphWorkspace-CXLerseR.js  GraphWorkspace-CacDlY1u.js  GraphWorkspace-CgL1F9Xl.js  GraphWorkspace-Cgl0H-j8.js  GraphWorkspace-CnrHgjnE.js  GraphWorkspace-CoUzNDQS.js  GraphWorkspace-CuFh4Pql.js  (+1020 more)
memory-trace/tests/: test_evidence_pack.py  test_file_graph_mode.py  test_graph_projection.py  test_incremental_projection.py  test_lense.py  test_link_sidecars.py  test_openapi_contract_fixture.py  test_parity.py  test_process_cli.py  test_projection_warm_start.py  test_service.py  test_static_serving.py  test_synthetic_fixtures.py  test_topic_communities.py  test_topic_wheel.py  test_trail_decision_edges.py  test_trail_decision_rows.py  test_trail_golden.py  test_trail_merge_accuracy.py  test_v1_api_contract.py  test_worktree_switching.py
memory-trace/tests/capture/: README.md  capture.mjs  scenarios.mjs
memory-trace/tests/contract/: README.md  export_openapi.py  openapi.v1.json  types.ts
memory-trace/tests/fixtures/: generate_synthetic.py  regen_trail_golden.mjs  regen_trail_golden.py  trail-golden-48.json
memory-trace/tests/fixtures/evidence-pack/: timeline-linked.json
memory-trace/tests/fixtures/graph-renderer/: bounded-neighbourhood.v1.json
memory_seed/: __init__.py  cli.py  core.py  docs_check.py  docs_index.py  esr.py  lense.py  mcp_server.py  mcp_validate.py  processes.py  quality.py  ranking_ab.py  retrieval.py  semantic_cache.py  situate.py  text_files.py  topics.py  worktree_gc.py
scripts/: build-renderer-benchmark.mjs  count_decision_shapes.py  launch-memory-trace.ps1
tests/: _git_helpers.py  test_agent_selection.py  test_branch_status.py  test_cli_help.py  test_core_misc.py  test_docs_check.py  test_docs_index.py  test_esr.py  test_git_hooks.py  test_hook_merge.py  test_integration_mode.py  test_lense.py  test_link_audit.py  test_links_check.py  test_mcp_merge.py  test_mcp_server.py  test_mcp_session_append.py  test_mcp_session_integrate.py  test_mcp_validation.py  test_memory_seed.py  test_processes.py  test_project_lifecycle.py  test_quality.py  test_ranking_ab.py  test_retrieval.py  test_retrieval_check_path.py  test_semantic_cache.py  test_session_append.py  test_session_fuse_and_merge.py  test_session_layout_migration.py  test_session_log_ordering_hook.py  test_session_reorder.py  test_session_schema.py  test_session_start_hook.py  test_session_target.py  test_situate.py  test_text_files.py  test_topics.py  test_topics_suggest.py  test_worktree_gc.py  (+1 more)
waste/: html-dashboard-removal.md
(+567 files in other folders)
