[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "memory-seed"
version = "1.3.1"
description = "Portable local memory seed for file-reading AI coding agents"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Jean Nathan Tshibuyi" }]
keywords = ["ai", "agents", "memory", "markdown", "local-first"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development",
  "Topic :: Utilities",
]

[project.scripts]
memory-seed = "memory_seed.cli:main"

[tool.setuptools]
packages = ["memory_seed"]

[tool.setuptools.package-data]
memory_seed = [
  "seed/AGENTS.md",
  "seed/CLAUDE.md",
  "seed/GEMINI.md",
  "seed/.AGENTS/agent-rules.md",
  "seed/.AGENTS/project-bootstrap.md",
]
