[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "memory-seed"
version = "2.12.0"
description = "Portable local memory seed for file-reading AI coding agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["model2vec>=0.8.1"]
license = { text = "MIT" }
authors = [{ name = "Jean Nathan Tshibuyi" }]
keywords = ["ai", "agents", "memory", "markdown", "local-first"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development",
  "Topic :: Utilities",
]

[project.scripts]
memory-seed = "memory_seed.cli:main"
memory-seed-mcp = "memory_seed.mcp_server:main"
memory-seed-mcp-validate = "memory_seed.mcp_validate:main"

[tool.setuptools]
packages = ["memory_seed"]

[tool.setuptools.package-data]
memory_seed = [
  "seed/AGENTS.md",
  "seed/CLAUDE.md",
  "seed/GEMINI.md",
  "seed/.agents/README.md",
  "seed/.agents/developer.md",
  "seed/.agents/content-creator.md",
  "seed/.agents/researcher.md",
  "seed/.agents/sales-rep.md",
  "seed/.agents/solo-founder.md",
  "seed/.agents/copywriter.md",
  "seed/.memory-seed/agent-rules.md",
  "seed/.memory-seed/archive/.gitkeep",
  "seed/.memory-seed/project-bootstrap.md",
  "seed/.memory-seed/skills/security_triage.md",
  "seed/.memory-seed/skills/copywriter-conversion.md",
  "seed/.memory-seed/skills/code_search.md",
  "seed/.memory-seed/skills/index.md",
  "seed/.memory-seed/skills/data_architecture.md",
  "seed/.memory-seed/skills/local_compilation.md",
  "seed/.memory-seed/skills/memory_consolidation.md",
  "seed/.memory-seed/skills/memory_doctor.md",
  "seed/.memory-seed/skills/release_publishing.md",
  "seed/.memory-seed/sessions/.gitkeep",
  "seed/.memory-seed/hooks/session-log-check.py",
  "seed/.memory-seed/hooks/memory-retrieval-check.py",
]
