[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "memory-seed"
version = "2.18.0"
description = "Portable local memory seed for file-reading AI coding agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["model2vec>=0.8.1"]
license = { text = "MIT" }
authors = [{ name = "Jean Nathan Tshibuyi" }]
keywords = ["ai", "agents", "memory", "markdown", "local-first"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development",
  "Topic :: Utilities",
]

[project.scripts]
memory-seed = "memory_seed.cli:main"
memory-seed-mcp = "memory_seed.mcp_server:main"
memory-seed-mcp-validate = "memory_seed.mcp_validate:main"
memory-trace = "memory_trace.cli:main"

[project.optional-dependencies]
# Optional review UI dependencies. Plain `pip install memory-seed` stays
# web-framework-free; `pip install "memory-seed[trace]"` enables the local
# Memory Trace browser UI and the `memory-trace` command.
trace = ["fastapi>=0.110", "uvicorn>=0.27"]
# Deprecated alias for one release window so existing `memory-seed[lense]`
# users do not hard-break while the product name moves to Memory Trace.
lense = ["fastapi>=0.110", "uvicorn>=0.27"]

[tool.setuptools]
packages = ["memory_seed", "memory_trace"]

[tool.setuptools.package-dir]
memory_trace = "memory-trace/memory_trace"

[tool.setuptools.package-data]
memory_seed = [
  "seed/AGENTS.md",
  "seed/CLAUDE.md",
  "seed/GEMINI.md",
  "seed/.agents/README.md",
  "seed/.agents/developer.md",
  "seed/.agents/content-creator.md",
  "seed/.agents/researcher.md",
  "seed/.agents/sales-rep.md",
  "seed/.agents/solo-founder.md",
  "seed/.agents/copywriter.md",
  "seed/.claude/commands/esr.md",
  "seed/.gemini/commands/esr.toml",
  "seed/.github/copilot-instructions.md",
  "seed/.memory-seed/agent-rules.md",
  "seed/.memory-seed/archive/.gitkeep",
  "seed/.memory-seed/project-bootstrap.md",
  "seed/.memory-seed/topics.yaml",
  "seed/.memory-seed/skills/agent_collaboration.md",
  "seed/.memory-seed/skills/security_triage.md",
  "seed/.memory-seed/skills/copywriter-conversion.md",
  "seed/.memory-seed/skills/code_search.md",
  "seed/.memory-seed/skills/compact_mermaid_diagrams.md",
  "seed/.memory-seed/skills/index.md",
  "seed/.memory-seed/skills/data_architecture.md",
  "seed/.memory-seed/skills/document_ingestion.md",
  "seed/.memory-seed/skills/docx_render_windows.md",
  "seed/.memory-seed/skills/end_of_turn.md",
  "seed/.memory-seed/skills/history_retrieval.md",
  "seed/.memory-seed/skills/local_compilation.md",
  "seed/.memory-seed/skills/memory_consolidation.md",
  "seed/.memory-seed/skills/memory_doctor.md",
  "seed/.memory-seed/skills/memory_hygiene.md",
  "seed/.memory-seed/skills/office_document_editing.md",
  "seed/.memory-seed/skills/proposal_lifecycle.md",
  "seed/.memory-seed/skills/release_publishing.md",
  "seed/.memory-seed/skills/risk_signaling.md",
  "seed/.memory-seed/skills/skill_architecture.md",
  "seed/.memory-seed/skills/session_logging.md",
  "seed/.memory-seed/skills/subproject_runtime.md",
  "seed/.memory-seed/sessions/.gitkeep",
  "seed/.memory-seed/hooks/session-log-check.py",
  "seed/.memory-seed/hooks/memory-retrieval-check.py",
  "seed/.memory-seed/hooks/session-start-context.py",
  "seed/.memory-seed/hooks/prepare-commit-msg.py",
]
memory_trace = [
  "static/index.html",
  "static/app.js",
  "static/styles.css",
  "static/manifest.json",
  "static/fonts/inter-var.woff2",
  "static/fonts/space-grotesk-var.woff2",
  "static/fonts/LICENSE-inter.txt",
  "static/fonts/OFL-space-grotesk.txt",
]
