[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "memory-trace"
version = "0.1.0"
description = "Memory Trace - the local, read-only review UI for Memory Seed project memory"
readme = "README.md"
requires-python = ">=3.11"
# Depends on the core control plane and consumes its public retrieval service.
# The web stack lives here, never in core: `pip install memory-seed` alone pulls
# no web framework.
# Floor is >=2.17, not 2.16: the UI renders the `branch` field (MemoryChunk.branch),
# which core added in 2.17. This hard-couples memory-trace 0.1.0 to memory-seed 2.17
# shipping first - it is not an optional bundle. Do not lower this floor.
dependencies = ["memory-seed>=2.17", "fastapi>=0.110", "uvicorn>=0.27"]
license = { text = "MIT" }
authors = [{ name = "Jean Nathan Tshibuyi" }]
keywords = ["ai", "agents", "memory", "review", "ui", "local-first"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development",
  "Topic :: Utilities",
]

[project.scripts]
memory-trace = "memory_trace.cli:main"

[tool.setuptools]
packages = ["memory_trace"]

[tool.setuptools.package-data]
memory_trace = [
  "static/index.html",
  "static/app.js",
  "static/styles.css",
  "static/manifest.json",
]
